# logline-workspace

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRECTION.md  Cargo.toml  Makefile  Paper III_ LLLV — The Retrieval Atom.md  Paper IV_ TDLN — The Logical Atom & Compiler Specification.md  README.md  RELEASE_NOTES_json_atomic_v0.1.0.md  RELEASE_NOTES_logline-core_v0.1.0.md  ROTEIRO_PADRAO_QUALIDADE.md  SECURITY.md  deny.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  deny.yml  docs.yml  hardening.yml  publish.yml  quality-check.yml  release.yml  sbom.yml
crates/atomic-codec/: Cargo.toml  README.md  ROADMAP.md
crates/atomic-codec/examples/: quickstart.rs
crates/atomic-codec/src/: binary.rs  lib.rs
crates/atomic-codec/tests/: codec_tests.rs  tlv_adversarial.rs
crates/atomic-crypto/: Cargo.toml  README.md  ROADMAP.md
crates/atomic-crypto/examples/: quickstart.rs
crates/atomic-crypto/src/: lib.rs
crates/atomic-crypto/tests/: crypto_tests.rs
crates/atomic-runtime/: Cargo.toml  README.md  ROADMAP.md
crates/atomic-runtime/src/: ctx.rs  events.rs  lib.rs  mw.rs  router.rs  typed.rs  web.rs
crates/atomic-sirp/: Cargo.toml  README.md  ROADMAP.md
crates/atomic-sirp/examples/: quickstart.rs
crates/atomic-sirp/src/: capsule.rs  idempotency.rs  lib.rs  receipt.rs  server.rs  transport_http.rs  wire.rs
crates/atomic-sirp/tests/: wire_adversarial.rs
crates/atomic-types/: Cargo.toml  README.md  ROADMAP.md
crates/atomic-types/examples/: quickstart.rs
crates/atomic-types/src/: lib.rs
crates/atomic-types/tests/: types_tests.rs
crates/atomic-ubl/: Cargo.toml  README.md
crates/atomic-ubl/src/: event.rs  ledger.rs  paths.rs  verify.rs  writer.rs  writer_async.rs
crates/atomic-ubl/tests/: ledger_prop.rs
crates/json_atomic/: .gitignore  Cargo.toml  README.md
crates/lllv-core/: CITATION.cff  CODE_OF_CONDUCT.md  Cargo.toml  PUBLISH_CHECKLIST.md  publish_github.sh  publish_with_github_app.py
crates/lllv-index/: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  deny.toml
crates/logline/: Cargo.toml  README.md
crates/logline-core/: CHANGELOG.md  Cargo.toml  README.md  deny.toml
crates/logline/src/: cli.rs  lib.rs  main.rs
crates/logline/tests/: pod_end_to_end.rs
crates/tdln-ast/: Cargo.toml  README.md
crates/tdln-ast/src/: canon.rs  lib.rs
crates/tdln-brain/: Cargo.toml  README.md
crates/tdln-brain/examples/: brain_local.rs  brain_openai.rs  quick.rs
crates/tdln-brain/src/: lib.rs  parser.rs  prompt.rs  util.rs
crates/tdln-brain/src/providers/: anthropic.rs  local.rs  mod.rs  openai.rs
crates/tdln-brain/tests/: parser_strict.rs
crates/tdln-compiler/: Cargo.toml
crates/tdln-compiler/src/: lib.rs
crates/tdln-gate/: Cargo.toml
crates/tdln-gate/src/: lib.rs
crates/tdln-proof/: Cargo.toml  LICENSE  README.md
crates/ubl-auth/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/ubl-auth/assets/receipts/: action.v1.schema.json
crates/ubl-auth/assets/sql/: 001_add_did.pg.sql  001_add_did.sql
crates/ubl-auth/src/: lib.rs
crates/ubl-auth/tests/: jwks.example.json
crates/ubl-ledger/: .gitignore  ROADMAP.md
crates/ubl-mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/ubl-mcp/examples/: echo.rs
crates/ubl-mcp/src/: audit.rs  client.rs  gate.rs  lib.rs  protocol.rs  server.rs
crates/ubl-mcp/src/transport/: http.rs  mod.rs  stdio.rs
crates/ubl-mcp/tests/: gate_deny.rs  protocol_roundtrip.rs
crates/ubl-office/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/ubl-office/examples/: loop.rs
crates/ubl-office/src/: errors.rs  hooks.rs  lib.rs  memory.rs  narrator.rs  runtime.rs
docs/: ATOMIC_FAMILY.md  DEPENDENCIAS_DIRETAS_VS_TRANSITIVAS.md
docs/internal/: CHECKLIST_POS_RELEASE.md  INVENTARIO_CRATES.md  REPO_PROFILES.md  TASKLIST_PADRONIZACAO_CRATES.md  finalizacao lllv-index.md
docs/papers/: Paper I_ The LogLine Protocol — The Conceptual Atom of Verifiable Action-2.md  Paper VII_ UBL — The Economic Infrastructure & The Product.md  Paper VI_ Chip as Code — Redefining Computing as Protocol.md  Paper V_ SIRP — The Network Atom.md
docs/planning/: Business Logic.md  MASTER_PLAN.md  NOTES.md  QUALITY_STANDARD.md
docs/specs/: tdln-brain.md  ubl-mcp.md  ubl-office.md
examples/: Cargo.toml  hello_ubl.rs  seal_demo.rs  sirp_roundtrip.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: json_canonize.rs  sirp_decode.rs  tlv_decode.rs  ubl_entry.rs
json_atomic/: Cargo.toml
json_atomic/src/: canonicalize.rs  cycle.rs  errors.rs  lib.rs  signed_fact.rs  trajectory.rs
lllv-core/: CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  SECURITY.md
lllv-core/.github/workflows/: sbom.yml
lllv-core/benches/: capsule.rs
lllv-core/examples/: create_capsule.rs
lllv-core/src/: capsule.rs  crypto.rs  errors.rs  header.rs  lib.rs  manifest.rs  version.rs
lllv-core/tests/: tamper.rs
lllv-index/: CITATION.cff  Cargo.toml  LICENSE  RELEASE_NOTES.md
lllv-index/.github/workflows/: deny.yml  sbom.yml
lllv-index/examples/: topk_verify.rs
lllv-index/src/: errors.rs  evidence.rs  hash.rs  merkle.rs  pack.rs  search.rs
lllv-index/tests/: basic.rs  merkle_test.rs
logline-core/: CITATION.cff  CONTRIBUTING.md  Cargo.toml  SECURITY.md
logline-core/.github/workflows/: ci.yml
logline-core/benches/: creation.rs
logline-core/examples/: ghost_record.rs  simple_commit.rs
logline-core/src/: builder.rs  consequence.rs  ghost.rs  lib.rs  payload.rs  signature.rs  status.rs  verb.rs
logline-core/tests/: invariants.rs  lifecycle.rs  serialization.rs  verb_registry.rs
scripts/: Cargo.toml  README.md  check_tag_matches_version.sh  publish_all.sh  tag_crate.sh  verify_all_crates.sh  verify_dependencies.sh  verify_quality.rs  verify_quality.sh  verify_quality_python.py
tdln-crates-hardcore-CORRECTION/tdln-ast/: Cargo.toml
tdln-crates-hardcore-CORRECTION/tdln-ast/src/: lib.rs
tdln-crates-hardcore-CORRECTION/tdln-proof/: .gitignore  Cargo.toml
tdln-crates-hardcore-CORRECTION/tdln-proof/src/: lib.rs
(+69 files in other folders)
