[workspace]
members = [
  "crates/logline-core",
  "crates/json_atomic",
  "crates/lllv-core",
  "crates/lllv-index",
  "crates/logline",
  "crates/tdln-ast",
  "crates/tdln-proof",
  "crates/tdln-compiler",
  "crates/tdln-gate",
  "crates/atomic-types",
  "crates/atomic-crypto",
  "crates/atomic-codec",
  "crates/atomic-ubl",
  "crates/atomic-sirp",
  "crates/atomic-runtime",
]
exclude = [
  "fuzz",  # Requires nightly + cargo-fuzz
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT"
homepage = "https://logline.foundation"
repository = "https://github.com/LogLine-Foundation/logline-workspace"
documentation = "https://docs.rs"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
blake3 = "1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ed25519-dalek = { version = "2.1", features = ["pkcs8"] }
atomic-types = "0.3"
atomic-crypto = "0.3"
atomic-codec = "0.3"
atomic-ubl = "0.3"
atomic-sirp = "0.3"
atomic-runtime = "0.3"

[patch.crates-io]
logline-core = { path = "crates/logline-core" }
json_atomic = { path = "crates/json_atomic" }
lllv-core = { path = "crates/lllv-core" }
lllv-index = { path = "crates/lllv-index" }
atomic-types = { path = "crates/atomic-types" }
atomic-crypto = { path = "crates/atomic-crypto" }
atomic-codec = { path = "crates/atomic-codec" }
atomic-ubl = { path = "crates/atomic-ubl" }
atomic-sirp = { path = "crates/atomic-sirp" }
atomic-runtime = { path = "crates/atomic-runtime" }
