[workspace]
members = [
  "crates/logline-core",
  "crates/json_atomic",
  "crates/lllv-core",
  "crates/lllv-index",
  "crates/logline",
  "crates/tdln-ast",
  "crates/tdln-proof",
  "crates/tdln-compiler",
  "crates/tdln-gate",
  "crates/tdln-brain",
  "crates/atomic-types",
  "crates/atomic-crypto",
  "crates/atomic-codec",
  "crates/ubl-ledger",
  "crates/atomic-sirp",
  "crates/atomic-runtime",
  "crates/ubl-mcp",
  "crates/ubl-office",
]
exclude = [
  "fuzz",  # Requires nightly + cargo-fuzz
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT"
homepage = "https://logline.foundation"
repository = "https://github.com/LogLine-Foundation/logline-workspace"
documentation = "https://docs.rs"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
blake3 = "1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ed25519-dalek = { version = "2.1", features = ["pkcs8"] }
ubl-types = "0.1"
ubl-crypto = "0.1"
ubl-codec = "0.1"
ubl-ledger = "0.1"
ubl-sirp = "0.1"
ubl-runtime = "0.1"

[patch.crates-io]
logline-core = { path = "crates/logline-core" }
json_atomic = { path = "crates/json_atomic" }
lllv-core = { path = "crates/lllv-core" }
lllv-index = { path = "crates/lllv-index" }
ubl-types = { path = "crates/atomic-types" }
ubl-crypto = { path = "crates/atomic-crypto" }
ubl-codec = { path = "crates/atomic-codec" }
ubl-ledger = { path = "crates/ubl-ledger" }
ubl-sirp = { path = "crates/atomic-sirp" }
ubl-runtime = { path = "crates/atomic-runtime" }
