[package]
name = "logline-examples"
version = "0.1.0"
edition = "2021"
publish = false
description = "Examples for the LogLine ecosystem"

[dependencies]
blake3 = "1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "hello_ubl"
path = "hello_ubl.rs"

[[example]]
name = "sirp_roundtrip"
path = "sirp_roundtrip.rs"

[[example]]
name = "seal_demo"
path = "seal_demo.rs"
