[package]
name = "lllv-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "LLLV — Cryptographic capsules for verifiable retrieval."
repository = "https://github.com/LogLine-Foundation/lllv-core"
homepage = "https://logline.foundation"
readme = "README.md"
keywords = ["search", "retrieval", "blake3", "ed25519", "verifiable"]
categories = ["algorithms", "cryptography", "encoding"]
rust-version = "1.75"
resolver = "2"
documentation = "https://docs.rs/lllv-core"
exclude = [".github/**", "deny.toml", "SECURITY.md", "CODE_OF_CONDUCT.md", "CHANGELOG.md"]

[features]
default = ["std", "manifest"]
std = []
alloc = []
unicode = []          # reservado (strings NFC no manifesto; futuro no_std)
manifest = ["json_atomic"]  # ativa integração com JSON✯Atomic (Paper II)

[dependencies]
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["pkcs8"] }
chacha20poly1305 = "0.10"
thiserror = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "2.6"

# Paper I/II
logline-core = { version = "0.1.1", features = ["serde"] }
json_atomic = { version = "0.1.1", optional = true }

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[package.metadata.docs.rs]
features = ["std", "manifest"]
no-default-features = false

[[bench]]
name = "capsule"
harness = false
