[package]
name = "lllv-index"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "LLLV — Index Pack + Merkle Evidence: verifiable Top-K for vector search."
repository = "https://github.com/LogLine-Foundation/lllv-index"
homepage = "https://logline.foundation"
readme = "README.md"
keywords = ["search", "retrieval", "merkle", "blake3", "verifiable"]
categories = ["algorithms", "cryptography", "encoding"]
rust-version = "1.75"
resolver = "2"
documentation = "https://docs.rs/lllv-index"

[features]
default = ["std", "manifest"]
std = []
alloc = []
manifest = ["json_atomic"]   # JSON✯Atomic para assinar manifesto/evidence (Paper II)

[dependencies]
lllv-core = "0.1.0"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["pkcs8"] }
thiserror = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# opcional para selar/validar manifesto & evidence
json_atomic = { version = "0.1.1", optional = true }

[dev-dependencies]
rand = "0.8"

[[example]]
name = "topk_verify"

[package.metadata.docs.rs]
features = ["manifest"]
no-default-features = false
