[package]
name = "logline-core"
version = "0.1.1"
edition = "2021"
description = "The Conceptual Atom of Verifiable Action — LogLine Protocol implementation"
license = "MIT"
repository = "https://github.com/LogLine-Foundation/logline-core"
readme = "README.md"
keywords = ["audit", "intent", "zero-trust", "ledger"]
categories = ["cryptography", "data-structures"]
resolver = "2"
rust-version = "1.75"
documentation = "https://docs.rs/logline-core"
homepage = "https://logline.foundation"
exclude = ["docs/**", ".github/**", "SECURITY.md", "CONTRIBUTING.md", "CODE_OF_CONDUCT.md"]

[features]
default = ["std"]
std = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.5"

[[example]]
name = "simple_commit"

[[example]]
name = "ghost_record"

[[bench]]
name = "creation"
harness = false

[package.metadata.docs.rs]
all-features = true
