[package]
name = "atomic-codec"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Canonical JSON✯Atomic encode/decode + binary TLV codec for LogLine Workspace."
rust-version = "1.75"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/atomic-codec"
keywords = ["logline", "json", "codec", "atomic", "blake3"]
categories = ["encoding", "data-structures", "cryptography"]

[features]
default = []
guard = []

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json_atomic = { path = "../json_atomic", version = "0.1.1" }
blake3 = "1"
serde_yaml = "0.9"
atomic-types = { path = "../atomic-types", version = "0.3" }

[dev-dependencies]
atomic-crypto = { path = "../atomic-crypto", version = "0.3" }
