[package]
name = "ubl-codec"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "UBL codec: Canonical JSON✯Atomic encode/decode + binary TLV for Universal Business Ledger."
rust-version = "1.75"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ubl-codec"
keywords = ["ubl", "ledger", "codec", "tlv", "blake3"]
categories = ["encoding", "data-structures", "cryptography"]

[features]
default = []
guard = []

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json_atomic = { path = "../json_atomic", version = "0.1.1" }
blake3 = "1"
serde_yaml = "0.9"
ubl-types = { path = "../atomic-types", version = "0.1.0" }

[dev-dependencies]
ubl-crypto = { path = "../atomic-crypto", version = "0.1.0" }
