[package]
name = "atomic-crypto"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Crypto helpers: SK wrapper, KID, HMAC, did:key, batch verify, atomic-types integration."
rust-version = "1.75"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/atomic-crypto"
keywords = ["logline", "crypto", "ed25519", "hmac", "did-key"]
categories = ["cryptography", "encoding", "data-structures"]

[dependencies]
thiserror = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
blake3 = "1"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hmac = "0.12"
sha2 = "0.10"
bs58 = "0.4"
atomic-types = { path = "../atomic-types", version = "0.3" }

[dev-dependencies]
serde_json = "1.0"
