[package]
name = "ubl-crypto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "UBL crypto helpers: SK wrapper, KID, HMAC, did:key, batch verify for Universal Business Ledger."
rust-version = "1.75"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ubl-crypto"
keywords = ["ubl", "ledger", "ed25519", "hmac", "blake3"]
categories = ["cryptography", "encoding", "data-structures"]

[dependencies]
thiserror = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
blake3 = "1"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hmac = "0.12"
sha2 = "0.10"
bs58 = "0.4"
ubl-types = { path = "../atomic-types", version = "0.1.0" }

[dev-dependencies]
serde_json = "1.0"
