[package]
name = "atomic-runtime"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Atomic runtime: router+middlewares, budgets, UBL logging."
rust-version = "1.75"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/atomic-runtime"
keywords = ["logline", "atomic", "runtime", "router", "middleware"]
categories = ["network-programming", "asynchronous", "data-structures"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
atomic-types = "0.3.1"
atomic-codec = "0.3.1"
atomic-crypto = "0.3.1"
atomic-ubl = "0.3.1"
logline-core = { path = "../logline-core", version = "0.1.1" }
json_atomic = { path = "../json_atomic", version = "0.1.1" }