[package]
name = "logline"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "LogLine: full stack bundle (TDLN + JSON✯Atomic + LogLine core + LLLV) with CLI."
license = "MIT"
repository = "https://github.com/LogLine-Foundation/logline-workspace"
homepage = "https://logline.foundation"
documentation = "https://docs.rs/logline"
readme = "README.md"
keywords = ["logline", "tdln", "bundle", "json-atomic", "lllv"]
categories = ["cryptography", "data-structures", "algorithms"]
exclude = [".github/**", "deny.toml", "SECURITY.md", "CODE_OF_CONDUCT.md", "CHANGELOG.md"]

[features]
default = ["std", "signing"]
std = []
server = ["dep:axum", "dep:http"]
signing = ["ubl-ledger/signing"]

[dependencies]
tdln-gate = { path = "../tdln-gate", version = "0.1.1", features = ["dv25", "ed25519"] }
tdln-compiler = { path = "../tdln-compiler", version = "0.1.1", features = ["dv25", "ed25519"] }
tdln-proof = { path = "../tdln-proof", version = "0.1.1", features = ["dv25", "ed25519"] }
tdln-ast = { path = "../tdln-ast", version = "0.1.1" }
json-atomic = { package = "json_atomic", path = "../json_atomic", version = "0.1.1" }
logline-core = { path = "../logline-core", version = "0.1.1" }
lllv-core = { path = "../lllv-core", version = "0.1.1" }
lllv-index = { path = "../lllv-index", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
walkdir = "2"
regex = "1"
colored = "2"
axum = { version = "0.7", optional = true }
http = { version = "1", optional = true }
ubl-types = { path = "../atomic-types", version = "0.1.0" }
ubl-codec = { path = "../atomic-codec", version = "0.1.0" }
ubl-crypto = { path = "../atomic-crypto", version = "0.1.0" }
ubl-ledger = { path = "../atomic-ubl", version = "0.1.0" }
ubl-sirp = { path = "../atomic-sirp", version = "0.1.0" }

[package.metadata.docs.rs]
features = ["std"]
no-default-features = false
all-features = true

[dev-dependencies]
tempfile = "3"
hex = "0.4"

[package.metadata.paper]
url = "https://papers.logline.foundation/blog/paper-I-logline-protocol"

[[bin]]
name = "logline"
path = "src/main.rs"
