[package]
name = "tdln-ast"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "TDLN — canonical AST for deterministic, proof-carrying translation (NL/DSL → Logical Atom)."
repository = "https://github.com/LogLine-Foundation/logline-workspace"
homepage = "https://logline.foundation"
readme = "README.md"
keywords = ["tdln", "ast", "deterministic", "canonical", "blake3"]
categories = ["data-structures", "parsing"]
documentation = "https://docs.rs/tdln-ast"
exclude = [".github/**", "deny.toml", "SECURITY.md", "CODE_OF_CONDUCT.md", "CHANGELOG.md"]

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
hex = "0.4"
json_atomic = { path = "../json_atomic" }

[package.metadata.docs.rs]
features = ["std"]
no-default-features = false
all-features = false

[package.metadata.paper]
url = "https://papers.logline.foundation/blog/paper-IV-tdln"
