[package]
name = "tdln-gate"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "TDLN — Policy Gate (preflight/decision) with proof-carrying determinism."
repository = "https://github.com/LogLine-Foundation/logline-workspace"
homepage = "https://logline.foundation"
readme = "README.md"
keywords = ["tdln", "policy", "gate", "deterministic"]
categories = ["algorithms", "authentication"]
documentation = "https://docs.rs/tdln-gate"
exclude = [".github/**", "deny.toml", "SECURITY.md", "CODE_OF_CONDUCT.md", "CHANGELOG.md"]

[features]
default = ["std"]
std = []
alloc = []
ed25519 = ["tdln-proof/ed25519"]
dv25 = ["tdln-proof/dv25", "dep:logline-core"]

[dependencies]
tdln-compiler = { version = "0.1.1", path = "../tdln-compiler" }
tdln-proof = { version = "0.1.1", path = "../tdln-proof" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
blake3 = "1.5"
hex = "0.4"
logline-core = { version = "0.1.1", optional = true }

[package.metadata.docs.rs]
features = ["std"]
no-default-features = false
all-features = false

[package.metadata.paper]
url = "https://papers.logline.foundation/blog/paper-IV-tdln"
