[package]
name = "ubl-mcp"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Secure, audited Model Context Protocol (MCP) client/server with policy gates and audit logging."
repository = "https://github.com/LogLine-Foundation/logline-workspace"
homepage = "https://logline.foundation"
readme = "README.md"
keywords = ["mcp", "json-rpc", "agent", "security", "tools"]
categories = ["api-bindings", "asynchronous", "authentication"]
documentation = "https://docs.rs/ubl-mcp"
exclude = [".github/**", "deny.toml", "SECURITY.md", "CODE_OF_CONDUCT.md", "CHANGELOG.md"]

[features]
default = ["client", "server", "transport-stdio"]
client = []
server = []
transport-stdio = ["dep:tokio", "dep:tokio-util", "dep:futures"]
transport-http = ["dep:reqwest"]
gate-tdln = ["dep:tdln-gate", "dep:tdln-ast", "dep:tdln-compiler"]
audit = []

[dependencies]
# LogLine / UBL stack (optional for gate-tdln)
tdln-gate = { version = "0.1.1", path = "../tdln-gate", optional = true }
tdln-ast = { version = "0.1.1", path = "../tdln-ast", optional = true }
tdln-compiler = { version = "0.1.1", path = "../tdln-compiler", optional = true }

# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
schemars = "0.8"
anyhow = "1"

# Transports (optional)
tokio = { version = "1", features = ["io-std", "io-util", "sync", "macros", "rt"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
futures = { version = "0.3", optional = true }
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
schemars = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
