[package]
name = "ubl-office"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Execution environment for LogLine Agents: lifecycle, memory, and I/O coordination."
repository = "https://github.com/LogLine-Foundation/logline-workspace"
homepage = "https://logline.foundation"
readme = "README.md"
keywords = ["agent", "runtime", "environment", "tdln", "mcp"]
categories = ["asynchronous", "concurrency"]
documentation = "https://docs.rs/ubl-office"
exclude = [".github/**", "deny.toml", "SECURITY.md", "CODE_OF_CONDUCT.md", "CHANGELOG.md"]

[features]
default = []

[dependencies]
tdln-brain = { version = "0.2.0", path = "../tdln-brain" }
tdln-ast = { version = "0.1.1", path = "../tdln-ast" }
tdln-gate = { version = "0.1.1", path = "../tdln-gate" }
tdln-compiler = { version = "0.1.1", path = "../tdln-compiler" }
ubl-mcp = { version = "0.2.0", path = "../ubl-mcp", features = ["client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt", "fs"] }
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
